--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
                 <div id="screen-1" class="screen hidden flex flex-col items-center justify-between h-full p-8 text-center">
                     <div>
-                        <h1 class="text-3xl font-bold text-gray-800">Ready to Transform?</h1>
-                        <p class="text-gray-500 mt-2">Let's build a healthier you, one step at a time.</p>
+                        <h1 class="text-3xl font-bold text-gray-800">Your Complete Fat Loss Ecosystem</h1>
+                        <p class="text-gray-500 mt-2">Track meals & workouts, connect with coaches, and join a supportive community.</p>
                     </div>
                     <div class="my-8">
                         <img src="https://i.imgur.com/2s2F5zN.png" alt="Fitness illustration" class="max-w-xs mx-auto">
